<resources>
    <string name="app_name">programacionmovil</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_perfil">Perfil</string>
    <string name="menu_fotos">Fotos</string>
    <string name="menu_video">Video</string>
    <string name="menu_web">Web</string>
    <string name="menu_botones">Botones</string>
</resources>