<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_perfil">

    <fragment
        android:id="@+id/nav_perfil"
        android:name="com.example.programacionmovil.ui.perfil.PerfilFragment"
        android:label="@string/menu_perfil"
        tools:layout="@layout/fragment_perfil" />

    <fragment
        android:id="@+id/nav_fotos"
        android:name="com.example.programacionmovil.ui.fotos.FotosFragment"
        android:label="@string/menu_fotos"
        tools:layout="@layout/fragment_fotos" />

    <fragment
        android:id="@+id/nav_video"
        android:name="com.example.programacionmovil.ui.video.VideoFragment"
        android:label="@string/menu_video"
        tools:layout="@layout/fragment_video" />

    <fragment
        android:id="@+id/nav_web"
        android:name="com.example.programacionmovil.ui.web.WebFragment"
        android:label="@string/menu_web"
        tools:layout="@layout/fragment_web" />

    <fragment
        android:id="@+id/nav_botones"
        android:name="com.example.programacionmovil.ui.botones.Botones"
        android:label="@string/menu_botones"
        tools:layout="@layout/fragment_botones" />
</navigation>